website/docs/v9.0.0/en/guide/architecture.mdx
---
title: 'Architecture'
description: 'Session construction, run scope, governed invocation, events, and persistence'
---

# Architecture

A3S Code separates configuration resolution, per-run execution, stable wire
contracts, and persistence. The TUI and SDKs use the same runtime kernel; they do
not get separate execution paths.

```text
CodeConfig + SessionOptions
  -> validate and resolve async resources
  -> ResolvedSessionConfig
  -> AgentSession
       -> single-flight run admission
       -> FactRun (one per run)
            ├─ fact log   .a3s/effect-log/<thread>.jsonl
            ├─ fold       -> view + next transition
            ├─ kernel     -> permission projection, completion gate
            ├─ LLM invoker  -> provider calls
            ├─ tool invoker -> model, nested, delegated, and host-direct calls
            └─ events       -> EventEnvelopeV1 -> Rust / Node / Python / Go consumers
       -> SessionSnapshotV1 -> atomic store generation
```

## Fact-Log Control

The coding loop is a fold over an append-only fact log. Nothing else chooses
the next step: not a loop checkpoint, not an in-memory flag, not a timer. Each
run opens a `FactRun` for the session and settles it by appending a fact and
folding the log again. The fold is `a3s-effect`: a new prompt enters through
`ingest_coding`, and `resume_coding` continues an existing log
(`core/src/fact_control.rs`).

### The fact log

The log for a session lives at `<workspace>/.a3s/effect-log/<thread>.jsonl`.
The thread is the session ID when that ID is at most 128 characters of
`A-Z`, `a-z`, `0-9`, `_`, `.`, `:`, or `-`. Other session IDs map to a stable
`s-<hex>` thread.

| Fact kind               | Appended when                                   |
| ----------------------- | ----------------------------------------------- |
| `user.message`          | A prompt or an applied steer arrives            |
| `model.turn`            | The model returns text or a tool call           |
| `tool.result`           | A tool call finishes, is denied, or is blocked  |
| `confirmation.answered` | The host approves or rejects a parked tool call |
| `question.answered`     | The host answers a parked `ask_user` question   |
| `compaction.done`       | The `compact` part summarizes older facts       |
| `budget.denied`         | The `budget` part refuses another tool call     |

### Fold and next transition

Folding the log yields a view (system lines, messages, tool specs, pending
confirmation or question, assistant text) and a phase: `idle`, `infer`,
`compact`, `confirm`, `question`, `tool`, `deny`, or `done`. The phase is the
next transition. `infer` calls the model, `tool` runs the recorded call,
`compact` summarizes, and `done` ends the run. The actor that folds the log is
assembled by [Meta Harness](/guide/meta-harness); without a recipe it is the
default stock tree.

A run is bounded by a step limit of 32 transitions per `send`, `stream`, or
`resume_run`. Reaching it stops the run with a `StepLimit` error rather than
silently continuing. When a session is resumed from stored
history into an empty log, prior turns are recorded as `model.turn` facts, so
they are not sent to the model again. An existing log is left as it is.

### Parking

`confirm` and `question` are parked phases. The fold stops there and waits for
a fact. The fact log has no timeout for a parked call.

- A tool call whose permission decision is Ask parks in `confirm`. During a live
  run, the session's confirmation manager asks the host and emits
  `confirmation_required`. `confirm_tool_use(tool_id, approved, reason)` settles
  it. The answer is appended as `confirmation.answered`, and the fold continues.
  Any timeout belongs to the host's confirmation policy, not to the log.
- An `ask_user` call parks in `question` and emits `user_question`. The answer
  is appended as `question.answered`. A run that asks more questions than the
  cap fails with `ask_user question cap exceeded`.

Because the answer is a fact, a parked call survives a process restart. After
restart, `confirm_tool_use` for the parked tool ID appends the answer and the
fold resumes from the log.

### Resume

`resume_run` folds the log and continues from its phase. When a loop checkpoint
exists for the run, the thread's log is first rebuilt from the checkpoint
transcript; the checkpoint supplies history, not the next model call. A `tool`
phase whose result is missing runs that tool once. A quiescent log resumes
with zero steps.

### Steer

`steer` does not start a second turn. At the next provider call the run
drains its control inbox, appends each steer as a `user.message` fact, and
sends it with that request. `interrupt` cancels cooperatively; the run records
the result and cleans up before it reaches `cancelled`.

### Tool budget and tool-round cap

Two counters limit tool work. Both count successful tool results since the
latest `user.message`, so an applied steer resets them.

- The stock `budget` part allows 8 successful tool results per turn in a live
  session, unless a Meta Harness recipe sets `tool_budget`. A tool call after
  that records `budget.denied` and ends the turn without running the tool.
- `max_tool_rounds` is the tool-round cap. It comes from the ACL
  `max_tool_rounds` key, or per session from
  `SessionOptions::with_max_tool_rounds` (Node.js `maxToolRounds`, Python
  `max_tool_rounds`, Go `MaxToolRounds`). Once the cap is reached, the next completion request
  carries an empty tool list, so the model must answer in text. There is no
  separate finalization message.

## Kernel Wrappers

Two checks wrap every fact run. They belong to the kernel, so a Meta Harness
recipe cannot remove them (`KernelPolicy::admit()` always enables both).

### Permission projection

Every tool call the model returns is projected through the session's
`PermissionPolicy` before the fold stores it:

- A policy **deny** is final. The call is recorded with a `Permission denied`
  result and a `permission_denied` event.
- A policy **allow** runs the tool. A YOLO lane is recorded as allow before the
  check, so it does not turn an Ask into a prompt.
- An **ask** defers to the session permission checker. For example, the plan
  mode guardrail denies a write that the default policy would ask about. If the
  checker still asks, the call parks in `confirm`.
- A session without a confirmation manager has confirmation disabled, so an
  Ask runs the tool.

Active skill restrictions are applied at the same point and produce a denial
result.

### Completion gate

A run that mutated the workspace is complete only when a Passed verification
report bound to the mutation digest exists, or a host waiver covers that
digest. At the end of the run the kernel first merges a report from the host
`CompletionAttestor`, if one is installed, and then decides:

- **Allow** sets the result's completion to verified, waived, or narrative (no
  mutation).
- **Incomplete** or **Continue** returns an error instead of a completed
  result.

Once the latest folded fact is a tool result and the gate already allows
completion, the run finishes without another provider call. Assistant text is
never accepted as evidence. See [Verification](/guide/verification).

## Async-First Session Construction

`SessionOptions` is a public patch, not partially initialized runtime state. The
async construction path merges it with `CodeConfig`, validates conflicting
options, initializes async resources, and produces one internal
`ResolvedSessionConfig`. Session assembly consumes that resolved value instead
of resolving the same choice in multiple layers.

For Rust hosts, prefer:

```rust
let session = agent
    .session_builder("/repo")
    .options(options)
    .build()
    .await?;
```

`Agent::session_async`, `resume_session_async`, `session_for_agent_async`, and
`session_for_worker_async` use the same construction kernel. File-backed memory
and session stores, queues, trajectory recording, and session MCP discovery are
initialized asynchronously and return typed `SessionConfiguration` or
`SessionInitialization` errors with the failing resource.

The synchronous `Agent::session` method exists only for compatibility with
hosts that explicitly supply a pre-initialized memory store and have already
initialized every other resource. It never starts or blocks a Tokio runtime.
Configuration that requires async work fails with
`CodeError::AsyncSessionBuildRequired`; the runtime does not silently replace
the requested resource with an easier backend. A manager passed through
`SessionOptions::with_mcp` always requires async capability discovery. The sync
path can only inherit agent-global MCP tools already cached at agent startup.

## Single-Flight Conversation State

Conversation history is serialized by admission, not by optimistic locking.
Only one transcript-affecting operation may be active on a session. This covers
`send`, `stream`, both attachment variants, slash commands, and `resume_run`.
An overlap fails immediately with `CodeError::SessionBusy` before history is
read or a command is dispatched.

A stream retains its admission lease until the stream runtime finishes. Dropping
or aborting the public handle does not briefly admit a second operation while
the original producer is still writing events or history. Direct host tool
calls are control-plane operations and do not claim the conversation lease.

## Invocation Context

Each admitted run creates one immutable `InvocationContext` containing:

- run ID and session ID
- the run cancellation token
- the event sender
- the governance snapshot, including the active budget guard

That context is the source of truth for provider and tool work. It installs the
same cancellation token and session identity into `ToolContext`, so cancellation
reaches queued tools, nested `batch`/`program` calls, delegated work, planning,
structured-output repair, compaction, and other run-owned helper calls.

## Layered Prompt And Run Continuity

The default system prompt is assembled as a small set of non-overlapping
contracts. The shared runtime contract defines authority, autonomy, evidence,
continuity, and stop semantics; the execution-style prompt adds only the
behavior needed for that mode; the response-format fragment describes the
requested output. Filesystem instructions, Skills, and host context remain
separate inputs, so changing the default prompt does not shadow runtime policy
or remove tool capability.

Each active Run owns a bounded control inbox. `steer` is appended to the fact
log as a `user.message` at the next provider call (see
[Steer](#steer)); `interrupt` requests cooperative cancellation and lets normal
cleanup, checkpointing, hooks, and event persistence finish. Idempotency keys, immutable
Run IDs, optional turn revisions, and deadlines prevent retries or stale UI
state from affecting a newer turn. Compaction and recovery retain the objective,
constraints, acceptance criteria, decisions, and verification evidence needed
to continue without silently changing scope.

## Scoped Capability Composition

A Session publishes Tool, Skill, Agent, Command, Hook, MCP, Context, Flow,
Knowledge, and UI contributions as one immutable capability-catalog generation.
Preparation follows the bounded dependency graph, validation covers the complete
projection, and one compare-and-swap makes the generation visible. A failed or
cancelled preparation rolls back completed effects without exposing a partial
catalog.

Every admitted Run pins one projection and, when the projection came from A3S
Use, acquires the matching non-clone Use snapshot lease. Turns and Subtasks are
typed child scopes: they share the Run's structural generation and may narrow
authority, but they cannot rediscover a newer Session catalog. Run shutdown
settles supervised work and reversible effects before releasing the exact
generation lease.

`RunCapabilityBindingV1` records the Code generation, catalog digest, complete
authority-ceiling digest, and optional Use cursor in the Run and its logical
checkpoints. Recovery therefore rejects N/N+1 drift before admitting the target
Run, including a cutover that occurs during preparation. A fresh unpublished
Session may bootstrap exactly one complete historical batch; a Session that has
already published capabilities cannot rewind to an older generation.

## LLM Invocation Boundary

Run-owned provider work uses one scoped LLM invoker. It checks budget and
cancellation before each provider call, records usage after each successful
response, proxies streaming completion so terminal usage is recorded, and
combines caller and run cancellation. Normal turns, planning, structured output
and repair, compaction, and memory/helper paths use this boundary instead of
maintaining independent budget logic.

A hard budget denial is an error and is never converted into an ungoverned
fallback. Soft limits emit a `budget_threshold_hit` event and allow the call to
continue.

## Tool Invocation Boundary

The tool invoker is the governance kernel for model-selected, nested,
programmatic, delegated, and direct host calls. For model-owned work it applies
active-skill restrictions, permission policy, pre/post hooks, budget checks,
human confirmation, queue/timeout handling, cancellation, recursive-invocation
protection, and output sanitization. `batch` and `program` receive the scoped
invoker rather than calling a raw registry, so inner calls cannot escape those
checks.

Direct SDK helpers have an explicit `HostDirectPolicy::TrustedControlPlane`
origin.
The host is the authority that chose the operation, so model-facing permission
and confirmation decisions are skipped. Pre-hooks can still block the call, and
budget, queue/timeout, cancellation, recursion protection, post-hooks, and
output sanitization remain active. Applications must authorize end users before
exposing this privileged path.

Trust propagation is structural rather than ambient. Only built-in
control-plane orchestrators can convert an explicit host-direct call into the
internal trusted-nested origin for host-selected children. Public
`InvocationRuntime::invoke_tool` always creates an ordinary governed nested
call, even when the extension itself was called directly. Model dispatch also
removes inherited host-direct policy before it creates a `ToolContext`, so a
Skill, Task, or other model sub-run cannot use `batch` or `program` to amplify
its parent's authority.

## Stable Event Protocol

`AgentEvent` is the internal Rust runtime enum. The cross-language contract is
the lossless envelope:

```json
{
  "version": 1,
  "type": "tool_end",
  "payload": {},
  "metadata": {}
}
```

The v1 event catalog and the exhaustive Rust mapping share one source of truth,
so adding a runtime variant without a canonical wire name is a compile-time
failure. Node and Python consume the centralized projection for convenience
fields such as `text`, `toolName`, and `tool_name`. `type` remains an open
string: unknown future types preserve their full payload and metadata rather
than collapsing to an `unknown` sentinel.

## Atomic Session Persistence

`SessionSnapshotV1` is one versioned persistence generation. It contains the
conversation plus artifacts, trace events, run records, verification reports,
and delegated-task snapshots. `session.save()` materializes that aggregate and
calls `SessionStore::save_snapshot` once.

The file store writes one complete JSON envelope through a synced temporary
file and atomic replacement. The memory store replaces one aggregate entry
under one lock. Both advertise atomic snapshot capability. Historical bare
`SessionData` and fragment directories remain loadable for migration, but new
saves do not publish fragmented generations. A custom store must implement
aggregate save explicitly; the default method returns an error rather than
acknowledging a partial or no-op save.

## MCP Ownership And Isolation

MCP managers have explicit ownership:

1. The agent-global manager owns servers loaded from global configuration.
2. A host-supplied manager in session options is an inherited, read-only
   capability source.
3. Every session owns a new private live manager.

Capabilities are assembled in that order, so a session-local tool can shadow an
inherited tool only inside that session. Live `add_mcp_server` and
`remove_mcp_server` calls mutate only the private manager; removing a local
shadow reveals the inherited capability again. Sibling sessions cannot mutate
one another, and delegated children inherit the ordered manager sources needed
to call the same tools without transferring ownership.

A local stdio transport also owns the complete server process lifetime. It
starts the server as a Unix process-group leader, drains protocol output and
stderr separately, and terminates the group on close or drop. Outstanding
requests fail when either pipe closes instead of waiting for an unrelated
request deadline.

## Programmatic Tool Calling

The `program` tool runs JavaScript in an embedded QuickJS VM with a controlled
`ctx` object. The VM has no direct filesystem, network, subprocess, or
environment access. Its useful capabilities are tool calls routed back through
the scoped tool invoker. Use ordinary model tool calls when the next action
requires judgment; use a bounded program when the action sequence is already
known and only its result needs model interpretation.

## Extension Points

Use typed session options, skills, agent definitions, hooks, MCP servers,
memory/session stores, security providers, queue configuration, and workspace
services to adapt the runtime. Prefer explicit policy and replayable evidence
over alternate execution paths.
